syntax = "proto3";

option java_package = "br.com.nrsjnet.grpc";
option java_multiple_files = true;

service PaymentService {
  rpc Pay (PaymentRequest) returns (TicketPay);
}

message PaymentRequest {
  string uuidClient         = 1;
  string uuidAccountPayment = 2;
  string description        = 3;
  double value              = 4;
}

message TicketPay {
  string uuidPayment  = 1;
  bool success        = 2;
  string errorMessage = 3;
}